package com.training.OCP.bad;

public class Product {
    private String id;
    private String name;
    private Double price;
}
