package com.training.OCP.bad;

public enum ShippingType {
    Ground,
    Air
}
