package com.training.OCP.good;

public interface Shipping {
    Double getShippingPrice();
}
